...
        : ref
            .watch(currentUserRoleForBabyProfileProvider(selectedProfile.id))
            .asData
            ?.value;

    return AppBar(
      key: const Key('home_app_bar'),
      centerTitle: true,
      // Leading — search
      leading: IconButton(
        key: const Key('search_icon_button'),
        icon: const Icon(Icons.search),
        onPressed: () {
...
